kube_manifest.yml
# sca-tp-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sca-tp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: sca-tp
  template:
    metadata:
      labels:
        app: sca-tp
    spec:
      containers:
      - name: prod
        image: mabepisen/prod:v1
        ports:
        - containerPort: 1337 

# Service Pour App
apiVersion: v1
kind: Service
metadata:
  name: sca-tp-service
spec:
  selector:
    app: sca-tp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 1337 

# Déploiement de Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379

# Service pour Redis
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
